<?xml version="1.0"?>
<package format="2">
  <name>ros_custom_msgs</name>
  <version>0.0.0</version>
  <description>The ros_custom_msgs package</description>

  <maintainer email="mwasil@outlook.co.id">Mohammad Wasil</maintainer>
  <author email="mwasil@outlook.co.id">Mohammad Wasil</author>

  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>

</package>
