<?xml version="1.0"?>
<package format="2">
  <name>roscpp_simple_publisher_subscriber</name>
  <version>0.0.0</version>
  <description>The roscpp_simple_publisher_subscriber package</description>

  <maintainer email="mwasil@outlook.co.id">Mohammad Wasil</maintainer>
  <author email="mwasil@outlook.co.id">Mohammad Wasil</author>

  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
