<?xml version="1.0"?>
<package format="2">
  <name>rospy_simple_service_client</name>
  <version>0.0.0</version>
  <description>The rospy_simple_service_client package</description>

  <maintainer email="mwasil@outlook.co.id">Mohammad Wasil</maintainer>
  <author email="mwasil@outlook.co.id">Mohammad Wasil</author>


  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros_custom_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
